/**
 * MinIODB Node.js TypeScript SDK 客户端模块
 * 
 * 注意：这是客户端的框架实现，完整功能需要在生成 gRPC 代码后实现。
 */

import { EventEmitter } from 'events';
import { MinIODBConfig, ConfigValidator, ConfigUtils } from '../config';
import { 
    MinIODBError, 
    MinIODBConnectionError, 
    ErrorUtils 
} from '../errors';
import {
    DataRecord,
    TableConfig,
    RestoreMetadataRequest,
    WriteDataResponse,
    QueryDataResponse,
    UpdateDataResponse,
    DeleteDataResponse,
    StreamWriteResponse,
    StreamQueryResponse,
    CreateTableResponse,
    ListTablesResponse,
    GetTableResponse,
    DeleteTableResponse,
    BackupMetadataResponse,
    RestoreMetadataResponse,
    ListBackupsResponse,
    GetMetadataStatusResponse,
    HealthCheckResponse,
    GetStatusResponse,
    GetMetricsResponse
} from '../models';

/**
 * MinIODB 客户端类
 */
export class MinIODBClient extends EventEmitter {
    private readonly config: MinIODBConfig;
    private isConnected: boolean = false;
    private grpcClient: any; // 实际类型将在生成 gRPC 代码后确定

    constructor(config: MinIODBConfig) {
        super();
        
        // 验证和合并配置
        this.config = ConfigValidator.mergeWithDefaults(config);
        
        // 初始化客户端（实际实现需要 gRPC 代码）
        this.initializeClient();
    }

    /**
     * 初始化客户端连接
     */
    private initializeClient(): void {
        try {
            // 注意：实际实现需要在生成 gRPC 代码后完成
            // const grpc = require('@grpc/grpc-js');
            // const protoLoader = require('@grpc/proto-loader');
            // 
            // // 加载 proto 文件
            // const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
            //     keepCase: true,
            //     longs: String,
            //     enums: String,
            //     defaults: true,
            //     oneofs: true
            // });
            // 
            // const proto = grpc.loadPackageDefinition(packageDefinition);
            // 
            // // 创建 gRPC 客户端
            // this.grpcClient = new proto.miniodb.v1.MinIODBService(
            //     ConfigUtils.getGrpcAddress(this.config),
            //     grpc.credentials.createInsecure()
            // );

            console.log('MinIODB 客户端已初始化（需要生成 gRPC 代码后完成实际连接）');
            this.isConnected = true;
            this.emit('connected');
        } catch (error) {
            const connectionError = new MinIODBConnectionError(
                '初始化客户端失败',
                error as Error
            );
            this.emit('error', connectionError);
            throw connectionError;
        }
    }

    /**
     * 检查连接状态
     */
    public isClientConnected(): boolean {
        return this.isConnected;
    }

    /**
     * 获取客户端配置
     */
    public getConfig(): MinIODBConfig {
        return { ...this.config };
    }

    // ========================================================================
    // 数据操作方法
    // ========================================================================

    /**
     * 写入数据
     */
    async writeData(table: string, record: DataRecord): Promise<WriteDataResponse> {
        this.validateConnection();
        
        try {
            // 注意：实际实现需要调用 gRPC 方法
            // const request = {
            //     table,
            //     data: {
            //         id: record.id,
            //         timestamp: record.timestamp.toISOString(),
            //         payload: record.payload
            //     }
            // };
            // 
            // return new Promise((resolve, reject) => {
            //     this.grpcClient.WriteData(request, (error: any, response: any) => {
            //         if (error) {
            //             reject(ErrorUtils.fromGrpcError(error));
            //         } else {
            //             resolve({
            //                 success: response.success,
            //                 message: response.message,
            //                 nodeId: response.node_id
            //             });
            //         }
            //     });
            // });

            // 模拟响应（实际实现时需要删除）
            return {
                success: true,
                message: '数据写入成功（模拟响应）',
                nodeId: 'miniodb-node-1'
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    /**
     * 查询数据
     */
    async queryData(
        sql: string, 
        limit?: number, 
        cursor?: string
    ): Promise<QueryDataResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                resultJson: '[]', // 模拟空结果
                hasMore: false,
                nextCursor: undefined
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    /**
     * 更新数据
     */
    async updateData(
        table: string,
        id: string,
        payload: Record<string, any>,
        timestamp?: Date
    ): Promise<UpdateDataResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                success: true,
                message: '数据更新成功（模拟响应）',
                nodeId: 'miniodb-node-1'
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    /**
     * 删除数据
     */
    async deleteData(
        table: string,
        id: string,
        softDelete: boolean = true
    ): Promise<DeleteDataResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                success: true,
                message: '数据删除成功（模拟响应）',
                deletedCount: 1
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    /**
     * 流式写入
     */
    async streamWrite(table: string, records: DataRecord[]): Promise<StreamWriteResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 流式方法
            return {
                success: true,
                recordsCount: records.length,
                errors: []
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    /**
     * 流式查询
     */
    async* streamQuery(
        sql: string,
        batchSize: number = 1000,
        cursor?: string
    ): AsyncGenerator<StreamQueryResponse, void, unknown> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 流式方法
            // 这里是模拟实现
            yield {
                records: [],
                hasMore: false,
                cursor: undefined
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    // ========================================================================
    // 表管理方法
    // ========================================================================

    /**
     * 创建表
     */
    async createTable(
        tableName: string,
        config: TableConfig,
        ifNotExists: boolean = false
    ): Promise<CreateTableResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                success: true,
                message: '表创建成功（模拟响应）'
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    /**
     * 列出表
     */
    async listTables(pattern?: string): Promise<ListTablesResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                tables: [],
                total: 0
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    /**
     * 获取表信息
     */
    async getTable(tableName: string): Promise<GetTableResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                tableInfo: {
                    name: tableName,
                    config: { bufferSize: 1000 },
                    createdAt: new Date(),
                    status: 'active'
                }
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    /**
     * 删除表
     */
    async deleteTable(
        tableName: string,
        ifExists: boolean = false,
        cascade: boolean = false
    ): Promise<DeleteTableResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                success: true,
                message: '表删除成功（模拟响应）',
                filesDeleted: 0
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    // ========================================================================
    // 元数据管理方法
    // ========================================================================

    /**
     * 备份元数据
     */
    async backupMetadata(force: boolean = false): Promise<BackupMetadataResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                success: true,
                message: '元数据备份成功（模拟响应）',
                backupId: `backup_${Date.now()}`,
                timestamp: new Date()
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    /**
     * 恢复元数据
     */
    async restoreMetadata(request: RestoreMetadataRequest): Promise<RestoreMetadataResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                success: true,
                message: '元数据恢复成功（模拟响应）',
                backupFile: request.backupFile,
                entriesTotal: 0,
                entriesOk: 0,
                entriesSkipped: 0,
                entriesError: 0,
                duration: '0s',
                errors: []
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    /**
     * 列出备份
     */
    async listBackups(days: number = 7): Promise<ListBackupsResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                backups: [],
                total: 0
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    /**
     * 获取元数据状态
     */
    async getMetadataStatus(): Promise<GetMetadataStatusResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                nodeId: 'miniodb-node-1',
                backupStatus: {},
                healthStatus: 'healthy'
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    // ========================================================================
    // 监控和健康检查方法
    // ========================================================================

    /**
     * 健康检查
     */
    async healthCheck(): Promise<HealthCheckResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                status: 'healthy',
                timestamp: new Date(),
                version: '1.0.0'
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    /**
     * 获取系统状态
     */
    async getStatus(): Promise<GetStatusResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                timestamp: new Date(),
                bufferStats: {},
                redisStats: {},
                minioStats: {},
                nodes: [],
                totalNodes: 0
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    /**
     * 获取性能指标
     */
    async getMetrics(): Promise<GetMetricsResponse> {
        this.validateConnection();
        
        try {
            // 实际实现需要调用 gRPC 方法
            return {
                timestamp: new Date(),
                performanceMetrics: {},
                resourceUsage: {},
                systemInfo: {}
            };
        } catch (error) {
            throw ErrorUtils.fromGrpcError(error);
        }
    }

    // ========================================================================
    // 工具方法
    // ========================================================================

    /**
     * 验证连接状态
     */
    private validateConnection(): void {
        if (!this.isConnected) {
            throw new MinIODBConnectionError('客户端未连接');
        }
    }

    /**
     * 关闭客户端连接
     */
    async close(): Promise<void> {
        if (this.grpcClient) {
            // 实际实现需要关闭 gRPC 连接
            // this.grpcClient.close();
        }
        
        this.isConnected = false;
        this.emit('disconnected');
    }

    /**
     * 获取连接地址
     */
    getGrpcAddress(): string {
        return ConfigUtils.getGrpcAddress(this.config);
    }

    /**
     * 获取 REST 基础 URL
     */
    getRestBaseUrl(): string {
        return ConfigUtils.getRestBaseUrl(this.config);
    }
}
